Prevent wrapping brand name (#1811)

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -72,6 +72,7 @@
       height: 60px;
       font-size: 25px;
       line-height: 38px;
+      white-space: nowrap;
       padding-left: 80px;
       &:hover {
         background: url('./brand.png') no-repeat 8px 8px;
